<resources>
    <string name="app_name">MobileSystems</string>
    <string name="clickButton">Нажми на меня</string>
    <string name="nextToLab">Вторая лаба</string>
    <string name="turnButton">Перевернуть</string>
    <string name="rectangleText">Квадрат</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Подтвердить</string>
    <string name="clickReady">Готово</string>
    <string name="input">Введите число</string>
    <string name="notAdmitted">Отпущена</string>
    <string name="admitted">Нажата</string>
    <string name="currentDate">Текущая дата:</string>
    <string name="currentTime">Текущее время:</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="Traffic">Traffic Light</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>